--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assingment 2</title>
+    <script
+      src="https://kit.fontawesome.com/bfee2b9990.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,7 +22,7 @@
     <main>
       <section class="hero container">
         <div class="hero-div">
-          <div>
+          <div class="hero-sub-div">
             <h2 class="hero-h2">The Greatest show on the earth</h2>
 
             <p class="hero-p">
@@ -254,5 +258,25 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
+    <footer>
+      <div>
+        <h3 class="footer-h3">Goal</h3>
+      </div>
+      <hr />
+      <div class="footer-menu">
+        <a href="">Contact Us</a>
+        <a href="">Terms of Service</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Privacy Setting</a>
+        <a href="">Goal App</a>
+        <a href="">Goal Live</a>
+      </div>
+      <div class="social">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+      </div>
+    </footer>
   </body>
 </html>
