--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <section class="hero container">
         <div class="hero-div">
-          <div class="hero-sub-div">
+          <div>
             <h2 class="hero-h2">The Greatest show on the earth</h2>
 
             <p class="hero-p">
