--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
             >
           </div>
           <div class="hero-img-div">
-            <img src="assets/Banner Image.png" alt="" srcset="" />
+            <img
+              class="hero-img"
+              src="assets/Banner Image.png"
+              alt=""
+              srcset=""
+            />
           </div>
         </div>
       </section>
