--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
               alt=""
               srcset=""
             />
+            <img
+              class="hero-img2"
+              src="assets/messi-removebg-preview.png"
+              alt=""
+              srcset=""
+            />
           </div>
         </div>
       </section>
@@ -278,9 +284,15 @@
         <a href="">Goal Live</a>
       </div>
       <div class="social">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-twitter"></i>
+        <a href="https://www.facebook.com/">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.twitter.com">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
       </div>
     </footer>
   </body>
