--- a/upcoming.html
+++ b/upcoming.html
@@ -177,9 +177,15 @@
         <a href="">Goal Live</a>
       </div>
       <div class="social">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-twitter"></i>
+        <a href="https://www.facebook.com/">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.twitter.com">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
       </div>
     </footer>
   </body>
